==> wbasser/SoftwareLibraries/HAL/ST/STM32L/UART/Core/Trunk/Uart.c <==
#include "Clock/Clock.h"
#include "Interrupt/Interrupt.h"
#include "UART/Uart.h"
#define BUFCTL_SIZE   sizeof( BUFCTL )
#define LCLCTL_SIZE   sizeof( LCLCTL )

void Uart_Initialize( void )
{
  PUARTDEF        ptDef;
  PLCLCTL         ptCtl;
  USART_TypeDef*  ptUsart;
  U16             wBaudRate;
  UARTDEVENUM     eDev;
  U32             uTemp;
  
  // for each defined UART
  for ( eDev = 0; eDev < UART_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition/control structures
    ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];

    // clear the receive/transmit buffers
    ptCtl->tRxBuf.wWrIdx = ptCtl->tRxBuf.wRdIdx = ptCtl->tRxBuf.wCount = 0;
    ptCtl->tTxBuf.wWrIdx = ptCtl->tTxBuf.wRdIdx = ptCtl->tTxBuf.wCount = 0;
    
    // get the pointer to the USART channel
    ptUsart = GetUsartChannel( ptDef->eChan );
    
    // now set the registers/CR3/CR2
    ptUsart->BRR = ComputeBaudrate( ptDef );
    ptUsart->CR3 = 0;
    uTemp = BITS( ptDef->eStopBit, USART_CR2_STOP_Pos );
    uTemp |= BITS( ptDef->eDataOrder, USART_CR2_MSBFIRST_Pos );
    ptUsart->CR2 = uTemp;
    
    // register the interrupt
    switch( ptDef->eChan )
    {
      case UART_CHAN_1 :
        uTemp = USART1_IRQn;
        break;
        
      case UART_CHAN_2 :
        uTemp = USART2_IRQn;
        break;

      case UART_CHAN_3 :
        uTemp = USART3_IRQn;
        break;

      case UART_CHAN_4 :
        uTemp = UART4_IRQn;
        break;

      case UART_CHAN_5 :
        uTemp = UART5_IRQn;
        break;
        
      default :
        uTemp = 0;
        break;
    }
    NVIC_EnableIRQ( uTemp );
    
    // now setup CR1
    uTemp = USART_CR1_RE | USART_CR1_TE | USART_CR1_RXNEIE;
    uTemp |= BITS( ptDef->eParity, USART_CR1_PS_Pos );
    switch( ptDef->eWrdLen )
    {
      case UART_WRDLEN_7 :
        uTemp |= USART_CR1_M1;
        break;

      case UART_WRDLEN_9 :
        uTemp |= USART_CR1_M0;
        break;

      default :
        break;
    }
    uTemp |= ( ptDef->eSamp == UART_SAMP_8X ) ? USART_CR1_OVER8 : 0;
    uTemp |= USART_CR1_UE;
    ptUsart->CR1 = uTemp;
  }
}

UARTERR Uart_Write( UARTDEVENUM eDev, PU8 pnData, U16 wLength, PU16 pwBytesWritten )
{
  UARTERR         eError = UART_ERR_NONE;
  PUARTDEF        ptDef;
  PLCLCTL         ptCtl;
  U16             wBytesRemaining, wIdx;
  USART_TypeDef*  ptUsart;
 
  // check for a valid UART
  if ( eDev < UART_DEV_ENUM_MAX )
  {
    // set the bytes written to zero
    *pwBytesWritten = 0;

    // get pointers to the control/def structure
    ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // get the pointer to the USART channel
    ptUsart = GetUsartChannel( ptDef->eChan );

    // compute the bytes written
    wBytesRemaining = ptDef->wTxBufSize - ptCtl->tTxBuf.wCount;
    *pwBytesWritten = MIN( wBytesRemaining, wLength );
    
    // for each byte
    Interrupt_Disable( );
    for ( wIdx = 0; wIdx < *pwBytesWritten; wIdx++ )
    {
      // put in buffer/adjust pointer/increment count
      *( ptDef->pnTxBuffer + ptCtl->tTxBuf.wWrIdx++ ) = *( pnData + wIdx );
      ptCtl->tTxBuf.wWrIdx %= ptDef->wTxBufSize;
      ptCtl->tTxBuf.wCount++;
    }

    // enable the data register enmpty interrupt
    ptUsart->CR1 |= ( USART_CR1_TXEIE | USART_CR1_TCIE );

    // enable the interrupt
    Interrupt_Enable( );
  }
  else
  {
    // illegal device
    eError = UART_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

static void IrqCommonHandler( UARTDEVENUM eDev )
{
  PUARTDEF            ptDef;
  PLCLCTL             ptCtl;
  USART_TypeDef*      ptUsart;
  U8                  nOption;
  PVUARTINTCALLBACK   pvCallBack;
  U32                 uIntFlags;
  UARTIRQEVENTS       eEvent = UART_IRQ_EVENT_NONE;
  
  // get pointer to the definition/control structures
  ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
  ptCtl = &atLclCtls[ eDev ];
  
  // get a pointer to the UART registers
  ptUsart = GetUsartChannel( ptDef->eChan );

  // get the callback
  pvCallBack = ptDef->pvCallback;
  
  // get the interrupt cause
  uIntFlags = ptUsart->ISR;

  // was this a RX interrupt
  if ( uIntFlags & USART_ISR_RXNE )
  {
    // get the data
    nOption = ( U8 )ptUsart->RDR;

    // check for an error
    if ( uIntFlags & USART_ISR_ORE )
    {
      // clear the error flag
      ptUsart->ICR = USART_ICR_ORECF;
    }
    else
    {
      // check for callback
      if ( ptDef->tEventFlags.bRxChar )
      {
        // if callback process it
        if (( pvCallBack != NULL ) & ( ptDef->tEventFlags.bRxChar ))
        {
          // call the callback with a receive char event
          eEvent = UART_IRQ_EVENT_RXCHAR;
          pvCallBack( eEvent, nOption );
        }
        // check for room in local buffer
        else if ( ptCtl->tRxBuf.wCount < ptDef->wRxBufSize )
        {
          // stuff in buffer/adust index/increment count
          *( ptDef->pnRxBuffer + ptCtl->tRxBuf.wWrIdx++ ) = nOption;
          ptCtl->tRxBuf.wWrIdx %= ptDef->wRxBufSize;
          ptCtl->tRxBuf.wCount++;
        }
      }
    }
  }
  
  // check for a data register empty interrupt
  if ( uIntFlags & USART_ISR_TXE )
  {
    // check for characters available
    if ( ptCtl->tTxBuf.wCount != 0 )
    {
      // output the character
      nOption = *( ptDef->pnTxBuffer + ptCtl->tTxBuf.wRdIdx++ );
      ptUsart->TDR = nOption;
      ptCtl->tTxBuf.wRdIdx %= ptDef->wTxBufSize;
      ptCtl->tTxBuf.wCount--;
        
      // check for callback
      if (( pvCallBack != NULL ) && ( ptDef->tEventFlags.bTxEmp ))
      {
        // call back with the appropriate TX event
        eEvent = UART_IRQ_EVENT_TXEMP;
        nOption = 0;
        pvCallBack( eEvent, nOption );
      }
    }
    else
    {
      // turn off the data register empty interrupt
      ptUsart->CR1 &= ~USART_CR1_TXEIE;
    }
  }  
    
  // check for a transmit complete interrupt
  if ( uIntFlags & USART_ISR_TC )
  {
    // clear the interrupt
    ptUsart->ICR = USART_ICR_TCCF;
    
    // if data is done, perform the callback
    if ( ptCtl->tTxBuf.wCount == 0 )
    {
      if (( pvCallBack  != NULL ) && ( ptDef->tEventFlags.bTxCmp ))
      {
        // call back with the appropriate TX event
        eEvent = UART_IRQ_EVENT_TXCMP;
        nOption = 0;
        pvCallBack( eEvent, nOption );

        // turn off the transmit complete interrupt
        ptUsart->CR1 &= ~USART_CR1_TCIE;
      }
    }
  }
}
